package com.example.jee.examen.enums;

public enum PartieStatus {
    EN_COURS,
    TERMINE,
    ABANDON
}
