package com.example.jee.examen.service;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class HallOfFameRow {
    private Long partieId;
    private String pseudo;
    private Integer score;
}
